--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
 <html>
-    <body>
-        <h1> hello world </h1>
-    </body>
+<head>
+    <title>
+        exprezu
+    </title>
+    <style>
+        div {
+            height: 57px;
+            width: 241px;
+
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            margin-top: -28px;
+            margin-left: -121px;
+        }
+    </style>
+</head>
+
+<body>
+    <div>
+        <img src="./exprezu-or.png"/>
+    </div>
+</body>
+
 </html>
