--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>
         exprezu
@@ -7,19 +8,27 @@
         div {
             height: 57px;
             width: 241px;
-
             position: fixed;
             top: 50%;
             left: 50%;
             margin-top: -28px;
             margin-left: -121px;
+            opacity: 0
         }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#div1").animate({
+                opacity: 1
+            }, 5000);
+        });
+    </script>
 </head>
 
 <body>
-    <div>
-        <img src="./exprezu-or.png"/>
+    <div id="div1">
+        <img src="./exprezu-or.png" />
     </div>
 </body>
 
