--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>
         exprezu
     </title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <style>
         div {
             height: 57px;
